# mtrview

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: commit-msg
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  docker_publish.yml  semantic_release.yml  trivy.yml
mtrview/: __init__.py  __main__.py  app.py  config.py  floorplan.py  models.py  mqtt.py  normalization.py  store.py  version.py
mtrview/assets/: layout.yml
mtrview/static/: app.css  app.js  floorplan-editor.js  floorplan-fullscreen.js  floorplan-shared.js
mtrview/templates/: floorplan.html  floorplan_edit.html  index.html
scripts/: check_conventional_commits.py
tests/: test_floorplan.py  test_normalization.py  test_store.py  test_version.py  test_web.py
