[project]
name = "mtrview"
version = "0.1.0"
description = "Human-friendly dashboard for mtr2mqtt summary topics"
readme = "README.md"
authors = [
    { name = "topo", email = "tvallas@iki.fi" },
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "paho-mqtt>=2.1.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "python-semantic-release>=10,<11",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/tvallas/mtrview"
Repository = "https://github.com/tvallas/mtrview"

[project.scripts]
mtrview = "mtrview.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.semantic_release]
allow_zero_version = true
commit_parser = "conventional"
tag_format = "v{version}"
commit_message = "chore(release): {version}"
version_toml = ["pyproject.toml:project.version"]
build_command = """
python -m pip install "uv>=0.11,<0.12"
rm -rf dist
uv lock
uv build
"""

[tool.semantic_release.changelog]
mode = "update"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
